[package]

name = "osmpbfreader"
version = "0.3.1"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
description = "Read OpenStreetMap PBF files in rust."
documentation = "http://texitoi.github.io/osmpbfreader-rs/"
homepage = "https://github.com/TeXitoi/osmpbfreader-rs"
repository = "https://github.com/TeXitoi/osmpbfreader-rs"
keywords = ["openstreetmap", "osm", "pbf"]
license = "WTFPL"
build = "build.rs"

[dependencies]
flate2 = "0.2.13"
byteorder = "0.5.1"
protobuf = "1.0.18"
mod_path = "0.1.6"
compiletest_rs = { version = "0.1.1", optional = true }

[build-dependencies.protobuf_build]
git = "https://github.com/plietar/rust-protobuf-build.git"

[dev-dependencies]
log = "0.3.6"

[features]
unstable = ["compiletest_rs"]
